# ai-interviewer

./: .dockerignore  .gitignore  Makefile  README.md  SSL-README.md  setup-iptables-safe.sh  simple-loadbalancer.yaml  simple-nginx-deployment.yaml  ssl-interviews-ink-fullchain.pem
backend/: Dockerfile  Dockerfile.local  init_db.py  main.py  main_original.py  migrate_profiles.py  requirements.txt
backend/app/: __init__.py  config.py
backend/app/database/: migrations.py  postgres.py  redis_client.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  database.py  schemas.py
backend/app/routes/: __init__.py  (+12 more)
database/: init-databases.sh
docker-compose/: Makefile  docker-compose.local.yml  docker-compose.yml
docker-compose/nginx/: nginx.conf
frontend/: Dockerfile  Dockerfile.build  next.config.ts  package-lock.json  package.json
frontend2/: DESIGN_SYSTEM.md  package-lock.json  package.json
k8s/: MIGRATION_PLAN.md  Makefile  README.md  metallb-config.yaml  test-nginx-deployment.yaml  test-nginx-working.yaml  test-simple-deployment.yaml  test-simple-ssl.yaml  working-test.yaml
k8s/base/: ingress-ip.yaml  ingress.yaml  kustomization.yaml
k8s/gateway/: .dockerignore  Dockerfile  default.conf  nginx-auth.conf  nginx-k8s.conf  nginx-landing.conf  nginx-simple.conf  nginx-test.conf  nginx.conf
nginx/: nginx.conf
nginx/lua/: auth_check.lua  logout.lua  oauth_callback_simple.lua
observability/grafana/: grafana.ini
observability/tempo/: tempo.yaml
scripts/: check-telemetry.sh  minio-init.sh
services/application_agent/: Dockerfile  __init__.py  __main__.py  database.py  main.py  requirements.txt
services/claude_llm_agent/: Dockerfile  Dockerfile.local  README.md  __init__.py  __main__.py  main.py  pyproject.toml  pyproject.toml.local  requirements.txt
services/file_agent/: Dockerfile  __init__.py  __main__.py  main.py  requirements.txt
services/interview_agent/: Dockerfile  Dockerfile.local  README.md  __init__.py  __main__.py  main.py  pyproject.toml  pyproject.toml.local  requirements.txt
services/interview_agent/core/: __init__.py  interview_conductor.py  question_generator.py  session_manager.py  turn_manager.py  violation_detector.py
services/interview_agent/database/: __init__.py  base.py  cache.py  database.py  models.py  operations.py
services/interview_agent/services/: __init__.py  dependency_service.py  storage_service.py
services/interview_agent/utils/: __init__.py
services/job_agent/: Dockerfile  __init__.py  __main__.py  convert_sql_to_jobs.py  create_job_files.py  database.py  database_old.py  main.py  main_old.py  requirements.txt
services/llm_agent/: Dockerfile  Dockerfile.local  README.md  __main__.py  main.py  pyproject.toml  pyproject.toml.local
services/openai_llm_agent/: Dockerfile  Dockerfile.local  README.md  __init__.py  __main__.py  main.py  pyproject.toml  pyproject.toml.local  requirements.txt
services/pdf_extractor_agent/: Dockerfile  Dockerfile.local  README.md  __init__.py  __main__.py  main.py  pyproject.toml  pyproject.toml.local  requirements.txt
services/pdf_extractor_agent/config/: __init__.py  settings.py
services/pdf_extractor_agent/tool_specs/: comprehensive_resume_tools.py
services/pdf_extractor_agent/tools/: __init__.py  image_extraction.py  metadata_extraction.py  table_extraction.py  text_extraction.py
services/pdf_extractor_agent/utils/: __init__.py  caching.py  formatting.py  s3_handler.py  validation.py
services/user_agent/: Dockerfile  __init__.py  __main__.py  database.py  main.py  requirements.txt
terraform/: .env.example  .terraform.lock.hcl  .terraform.tfstate.lock.info  Makefile  README.md  agents.tf  agents.tf.backup  backend.tf  configmaps.tf  database.tf  deploy.sh  env-secrets.tf  iptables.tf  main.tf  metallb.tf  minikube.tf  minio-init.tf  namespace.tf  nginx.tf  observability.tf  outputs.tf  storage.tf  terraform.tfvars  terraform.tfvars.example  variables.tf  versions.tf
terraform/scripts/: load-env.sh
ui/: index.html  login.html  test-auth.html
wireframes/: README.md  index-loggedin.html  index.html  nginx.conf
wireframes/css/: careers.css  listing-clean.css
wireframes/js/: careers.js
(+229 files in other folders)
