[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-interviewer-pdf-extractor-agent"
version = "1.0.0"
description = "PDF processing and extraction MCP Mesh agent for AI Interviewer system"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AI Interviewer Team", email = "team@ai-interviewer.dev"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    # Core MCP Mesh and FastMCP
    "mcp-mesh>=0.5.0,<0.6.0",
    "fastmcp>=0.4.0",
    
    # PDF processing
    "PyMuPDF>=1.23.0",
    "pdf2image>=1.16.0",
    "pytesseract>=0.3.0",
    "python-magic>=0.4.0",
    
    # Image processing
    "Pillow>=10.0.0",
    "opencv-python>=4.8.0",
    
    # Data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    
    # AWS S3/MinIO
    "boto3>=1.26.0",
    
    # HTTP client for downloading files
    "httpx>=0.25.0",
    
    # Utilities
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.0.0",
    
    # Logging and monitoring
    "structlog>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/mcp-mesh/ai-interviewer"
Repository = "https://github.com/mcp-mesh/ai-interviewer"
Issues = "https://github.com/mcp-mesh/ai-interviewer/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov --cov-report=term-missing"